# streamlit-swipecards

./: .cruft.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  QUICK_START.txt  README.md  SUCCESS_SUMMARY.md  USAGE_GUIDE.md  congratulations.py  debug_cards.py  demo.py  demo_caching.py  example.py  pills_demo.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_demo.sh  sample_data.csv  setup.py  table_example.py  test_component.sh  test_images.py  test_no_reload.py  test_pills.py  test_table_pills.py  test_theme.sh  test_theme_fixes.py
.github/workflows/: ci.yml  publish_PYPI_each_tag.yml
docs/: README.md
examples/: README.md  advanced_example.py  example.py  simple_example.py
examples/data/: sample_data.csv
src/streamlit_swipecards/: __init__.py
src/streamlit_swipecards/frontend/: main.js  style.css
tests/: README.md  conftest.py  test_component.py  test_examples.py
